--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -62,6 +62,8 @@
         "random": "cpp",
         "string_view": "cpp",
         "iomanip": "cpp",
-        "ranges": "cpp"
+        "ranges": "cpp",
+        "xlocmon": "cpp",
+        "xloctime": "cpp"
     }
 }
